--- a/src/pages/Login/Login.css
+++ b/src/pages/Login/Login.css
@@ -17,7 +17,7 @@ body {
 
 /* Terapkan gambar latar di seluruh layar */
 body {
-  background: url('../../assets/images/bg.jpg') center/cover no-repeat fixed;
+  background: url('../../assets/images/bg1.jpg') center/cover no-repeat fixed;
   position: relative;
 }
 
@@ -26,7 +26,7 @@ body::before {
   content: '';
   position: fixed;
   inset: 0;
-  background-color: rgba(0, 0, 0, 0.745);
+  background-color: rgba(0, 0, 0, 0.718);
   z-index: 1;
 }
 
@@ -77,10 +77,12 @@ body::before {
   width: 500px;
   max-width: 70%;
   padding: 32px;
-  background: rgba(255, 255, 255, 0.5);
+  background: rgba(116, 116, 116, 0.408);
   border-radius: 8px;
   box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
   text-align: center;
+  outline-style: solid;
+  outline-color: gray;
 }
 
 .login-icon {
@@ -168,7 +170,6 @@ body::before {
   color: white;
 }
 
-/* Tambahan: latar putih pada kotak centang */
 .remember input {
   margin-right: 6px;
   background-color: #ffffff;
@@ -184,7 +185,6 @@ body::before {
   text-decoration: underline;
 }
 
-/* ---- LOGIN BUTTON ---- */
 .btn-login {
   width: 100%;
   height: 44px;
